abstract class FinishViewInterface {
  void draw(bool win, String secretCombination);
}
