abstract class TitleViewInterface {
  void draw();
}
